--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -82,7 +82,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -97,4 +97,38 @@ body {
 #map {
   height: calc(100vh - 250px);
   width: 100%;
+}
+
+/* mobile media  */
+@media (max-width: 552px) {
+  .info {
+    display: flex;
+    flex-direction: column;
+    height: 235px;
+    padding: 15px 30px;
+    position: absolute;
+    top: 120px;
+  }
+  .info div {
+    padding: 5px 15px;
+    border: none;
+    display: block;
+    text-align: center;
+  }
+  .search {
+    position: relative;
+    left: -25px;
+    top: -50px;
+  }
+  .search input {
+    padding: 15px;
+    width: 300px;
+  }
+}
+
+@media (max-width: 372px) {
+  .search input {
+    padding: 15px;
+    width: 200px;
+  }
 }
